Started default 404 Not Found page.

--- a/testserver/.openxrc
+++ b/testserver/.openxrc
@@ -9,7 +9,7 @@ pub: /workspace/OpenX/testserver/public
 
 # Respond-With
 r403: /403.html
-r404: /404.html
+#r404: /404.html
 
 # Trigger-Code
 t403: /youcantaccessthis.txt
